Template update of Local Interconnect Network (LIN) Analyzer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,9 +23,9 @@ add_library(lin_analyzer SHARED ${SOURCES})
 target_link_libraries(lin_analyzer PRIVATE Saleae::AnalyzerSDK)
 
 if(MSVC)
-    install(TARGETS lin_analyzer RUNTIME DESTINATION ".")
+    install(TARGETS lin_analyzer RUNTIME DESTINATION "Analyzers")
 else()
-    install(TARGETS lin_analyzer LIBRARY DESTINATION ".")
+    install(TARGETS lin_analyzer LIBRARY DESTINATION "Analyzers")
 endif()
 
 set_post_build_destination(lin_analyzer)
