--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,13 +19,4 @@ src/LINSimulationDataGenerator.cpp
 src/LINSimulationDataGenerator.h
 )
 
-add_library(lin_analyzer SHARED ${SOURCES})
-target_link_libraries(lin_analyzer PRIVATE Saleae::AnalyzerSDK)
-
-if(MSVC)
-    install(TARGETS lin_analyzer RUNTIME DESTINATION "Analyzers")
-else()
-    install(TARGETS lin_analyzer LIBRARY DESTINATION "Analyzers")
-endif()
-
-set_post_build_destination(lin_analyzer)
+add_analyzer_plugin(lin_analyzer SOURCES ${SOURCES})
